See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.91.00

              pamstereogram: Add -tileable.  Thanks Scott Pakin.

              pjtoppm: Handle input stream with no transmission mode command.
              Always broken.  Pjtoppm was in primordial Netpbm (1991).

              cameratopam: Handle I/O error on input file.  Always broken.
              Cameratopam was new to Netpbm in Netpbm 10.25 (June 2005).

              xbmtopbm: Recognize "unsigned short" as an extension of
              XBM X10 format.

              pjtoppm: Fix handling of input with width unspecified or not
              positive.  Always broken.  (Pjtoppm was in primordial Netpbm, ca
              1991).

              winicontopam: Fix crash with PNG icon.  Always broken.
              Winicontopam was new in Netpbm 10.63 (June 2013).

              picttoppm: Fix bug with an input file that specifies a clip
              region (ClipRgn opcode) that is not contained within the
              picture frame.  Result is invalid memory access.  Broken
              some time 1994-2002.

              picttoppm: Fix incorrect output (sheared) when a blit must be
              scaled.  Broken in Netpbm 10.34 (June 2006) or 10.35 (August
              2006).

              pbmtonokia: Fix incorrect output with -txt option.

              pbmtonokia: Fix incorrect output with newer compiler.

              pnmtorle: Fix incorrect command and filename in header.
              Broken in Netpbm 10.88 (September 2019).

              cameratopam: Fix buffer overrun.  Always present. (cameratopam
              was new in Netpbm 10.28 (June 2005)).

              cameratopam: Fix undefined behavior using 'swab' to swap bytes
              in place.  Always present. (cameratopam was new in Netpbm 10.28
              (June 2005)).

              ppmtompeg: Fix buffer overruns with very long names in input